codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  为  gpt-5.1-codex-max 选 择 推 理 强 度

  1. 低               Fast responses with lighter reasoning
  2. 中 （ 默 认 ）       Balances speed and reasoning depth for everyday tasks
  3. 高               Greater reasoning depth for complex problems
› 4. 超 高  (current)  Extra high reasoning depth for complex problems
                     ⚠ 超 高  推 理 强 度 会 很 快 消 耗  Plus 套 餐 额 度 。

  Press enter to confirm or esc to go back
