codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 6679
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.4 (default)   Latest frontier agentic coding model.
  2. gpt-5.3-codex       Frontier agentic coding model.
  3. gpt-5.2-codex       Frontier agentic coding model.
  4. gpt-5.1-codex-max   Codex-optimized flagship for deep and fast reasoning.
  5. gpt-5.2             Latest frontier model with improvements across
                         knowledge, reasoning and coding
  6. gpt-5.1-codex-mini  Optimized for codex. Cheaper, faster, but less
                         capable.

  Press enter to select reasoning effort, or esc to dismiss.
