codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  要 启 用 多 代 理 吗 ？
  你 的 配 置 中 当 前 禁 用 了 多 代 理 。

› 1. 是 ， 启 用   立 即 保 存 该 设 置 。 你 需 要 新 建 会 话 后 才 能 使 用 。
  2. 暂 不 启 用   保 持 多 代 理 禁 用 。

  Press enter to confirm or esc to go back
