codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  选 择 人 格
  为  Codex 选 择 一 种 沟 通 风 格 。

  1. 友 好             温 和 、 协 作 、 乐 于 帮 助 。
› 2. 务 实  (current)  简 洁 、 聚 焦 任 务 、 直 接 。

  Press enter to confirm or esc to go back
