codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  接 近 限 流 阈 值
  是 否 切 换 到  gpt-5.1-codex-mini 以 降 低 额 度 消 耗 ？

› 1. 切 换 到  gpt-5.1-codex-mini  Optimized for codex. Cheaper, faster, but less
                                capable.
  2. 保 持 当 前 模 型
  3. 保 持 当 前 模 型 （ 不 再 提 示 ）    隐 藏 未 来 关 于 切 换 模 型 的 限 流 提 醒 。

  Press enter to confirm or esc to go back
