codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• 首次收到 Codex 输出前或刚回滚后，`/copy` 不可用。
